--- a/src/main/resources/templates/changenotices/changenoticeToInfo.html
+++ b/src/main/resources/templates/changenotices/changenoticeToInfo.html
@@ -15,49 +15,18 @@
 </head>
 <body>
     <div class="container">
+
         <a th:href="@{/changenotices/list}">Back to Change notices list</a>
+
         <br><br>
 
         <h3>Change notice Directory</h3>
+
         <hr>
 
-        <p class="h4 mb-4">Change notice information</p>
+        <p class="h4 mb-4" th:text="${changeNoticeTo.name} + ' information'"></p>
 
-        <span th:object="${changeNoticeTo}">
-            <div class="row">
-                <div class="col-sm-2">
-
-                </div>
-                <div class="col-sm-3 text-right">
-                 <a th:href="@{'/changenotices/showFormForUpdate/'+ ${changeNoticeTo.id}}" class="btn btn-sm btn-outline-info mb-1">Update</a>
-                    <a th:href="@{'/changenotices/delete/' + ${changeNoticeTo.id}}" class="btn btn-sm btn-outline-danger mb-1"
-                       onclick="if (!(confirm('Are you sure?'))) return false">Delete</a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-2">
-
-                </div>
-                <div class="col-sm-2 text-right">
-                    <form th:action="@{/changenotices/addDocumentForNotNew}" th:object="${changeNoticeTo}" method="post">
-                        <input type="hidden" th:field="*{id}">
-                        <input type="hidden" th:field="*{name}">
-                        <input type="hidden" th:field="*{changeCode}">
-                        <input type="hidden" th:field="*{issueDate}">
-                        <input type="hidden" th:field="*{developer}">
-<!--                        <input type="hidden" th:field="*{documents}">-->
-                        <div class="row">
-                            <div class="col-sm-6">
-
-                            </div>
-                            <div class="col-sm-5">
-                                <button type="submit" class="btn btn-sm btn-outline-secondary text-nowrap mb-1">Add/Remove documents</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
+        <div th:object="${changeNoticeTo}">
 
             <div class="row">
                 <div class="col-sm-2 border">
@@ -65,15 +34,6 @@
                 </div>
                 <div class="col-sm-3 border">
                     <h6 th:text="*{name}"></h6>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-2 border">
-                    <h6>Change code:</h6>
-                </div>
-                <div class="col-sm-3 border">
-                    <h6 th:text="*{changeCode}"></h6>
                 </div>
             </div>
 
@@ -88,6 +48,15 @@
 
             <div class="row">
                 <div class="col-sm-2 border">
+                    <h6>Change code:</h6>
+                </div>
+                <div class="col-sm-3 border">
+                    <h6 th:text="*{changeCode}"></h6>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-2 border">
                     <h6>Developer name:</h6>
                 </div>
                 <div class="col-sm-3 border">
@@ -95,7 +64,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row mb-1">
                 <div class="col-sm-2 border">
                     <h6>Documents:</h6>
                 </div>
@@ -104,7 +73,18 @@
                 </div>
             </div>
 
-        </span>
+            <div class="row mb-1">
+                <div class="col-sm-4 offset-1 text-right">
+                    <a th:href="@{'/changenotices/showFormForUpdate/' + ${changeNoticeTo.id}}" class="btn btn-sm btn-outline-info">Update</a>
+                    <a th:href="@{'/changenotices/delete/' + ${changeNoticeTo.id}}" class="btn btn-sm btn-outline-danger"
+                       onclick="if (!(confirm('Are you sure?'))) return false">Delete</a>
+                </div>
+            </div>
+
+        </div>
+
+
+
     </div>
 </body>
 </html>
