--- a/src/main/resources/templates/documents/info.html
+++ b/src/main/resources/templates/documents/info.html
@@ -25,7 +25,7 @@
 
         <hr>
 
-        <p class="h4 mb-4">Document information</p>
+        <p class="h4 mb-4" th:text="${document.decimalNumber} + ' information'"></p>
 
         <div th:object="${document}">
 
@@ -199,11 +199,7 @@
                 </div>
             </div>
 
-
         </div>
-
-
-
     </div>
 </body>
 </html>
