--- a/src/main/resources/templates/changenotices/form.html
+++ b/src/main/resources/templates/changenotices/form.html
@@ -29,14 +29,14 @@
 
         <p class="h4 mb-3 offset-sm-3">Change notice Card</p>
 
-        <form class="form-horizontal" th:object="${changeNoticeTo}" th:action="@{/changenotices/save}" method="post">
+        <form class="form-horizontal" th:object="${changeNotice}" th:action="@{/changenotices/save}" method="post">
 
             <div th:if="${#fields.hasErrors('*')}" class="text-danger h5 offset-sm-2">
                 <p th:text="'Please correct values in error below'">Error Message</p>
             </div>
 
             <input type="hidden" th:field="*{id}">
-            <input type="hidden" th:field="*{documents}">
+<!--            <input type="hidden" th:field="*{documents}">-->
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
