--- a/src/main/resources/templates/changenotices/info.html
+++ b/src/main/resources/templates/changenotices/info.html
@@ -60,7 +60,7 @@
                     <h6>Developer name:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <h6 th:text="*{developer.name}"></h6>
+                    <h6 th:text="*{developer == null} ? '' : *{name} "></h6>
                 </div>
             </div>
 
