--- a/src/main/resources/templates/internaldispatches/list-albums.html
+++ b/src/main/resources/templates/internaldispatches/list-albums.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
 
@@ -9,41 +9,71 @@
 
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
+    <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
+
     <title>Albums list</title>
 </head>
 <body>
 <div class="container">
-    <a th:href="@{/}">Back to Home page</a>
-    <br><br>
-    <h3>Album List</h3>
-    <hr>
 
+    <a th:href="@{/}">Back to Home page</a>
+
+    <br><br>
+
+    <h3>Album List</h3>
+
+    <hr>
 
     <table class="table table-bordered table-hover">
         <thead class="thead-dark text-center">
-        <tr>
-            <th class="align-middle">Album name</th>
-            <th class="align-middle">Stamp</th>
-            <th class="align-middle">Current handler</th>
-            <th class="align-middle">Handler name</th>
-            <th class="align-middle">Handler phone number</th>
-            <th class="align-middle">Received date</th>
-        </tr>
+            <tr>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="albumName">Album name</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="stamp">Stamp</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="dispatchHandler">Current handler</a></th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="internalHandlerName">Handler name</a></th>
+                <th class="align-middle">Handler phone number</th>
+                <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="receivedInternalDate">Received date</a></th>
+                <th class="align-middle">Action</th>
+            </tr>
         </thead>
-
         <tbody>
-        <tr th:each="tempAlbum : ${albums}">
-            <td class="align-middle">
-                <a th:href="@{'/internaldispatches/showAlbumInfo/' + ${tempAlbum.id}}"><span class="text-dark" th:text="${tempAlbum.albumName}"/></a>
-            </td>
-            <td class="align-middle text-center" th:text="${tempAlbum.stamp}"></td>
-            <td class="align-middle text-center" th:text="${tempAlbum.dispatchHandler.name}"></td>
-            <td class="align-middle text-center" th:text="${tempAlbum.internalHandlerName}"></td>
-            <td class="align-middle text-center" th:text="${tempAlbum.internalHandlerPhoneNumber}"></td>
-            <td class="align-middle text-center" th:text="${tempAlbum.receivedInternalDate}"></td>
-        </tr>
+            <tr th:each="tempAlbum : ${internalDispatches}">
+                <td class="align-middle">
+                    <a th:href="@{'/internaldispatches/showAlbumInfo/' + ${tempAlbum.id}}" th:text="${tempAlbum.albumName}"></a>
+                </td>
+                <td class="align-middle text-center" th:text="${tempAlbum.stamp}"></td>
+                <td class="align-middle text-center" th:text="${tempAlbum.dispatchHandler.name}"></td>
+                <td class="align-middle text-center" th:text="${tempAlbum.internalHandlerName}"></td>
+                <td class="align-middle text-center" th:text="${tempAlbum.internalHandlerPhoneNumber}"></td>
+                <td class="align-middle text-center" th:text="${tempAlbum.receivedInternalDate}"></td>
+                <td class="align-middle text-center">
+                    <a class="btn btn-sm btn-outline-danger"
+                       th:href="@{'/internaldispatches/showChangeHandlerForm/' + ${tempAlbum.id}}">Change handler</a>
+                </td>
+            </tr>
         </tbody>
     </table>
+
+    <div class="row mb-3">
+        <div class="col-sm-6">
+            Show <span sd:page-size-selector="javascript"></span> entries
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div sd:pagination-summary="">info</div>
+        </div>
+        <div class="col-sm-6">
+            <nav class="pull-right">
+                <ul class="pagination" sd:pagination-split="5" sd:pagination="full">
+                    <!-- Pagination created by SpringDataDialect, this content is just for mockup -->
+                    <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                    <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </div>
 </body>
 </html>
