--- a/src/main/resources/templates/internaldispatches/album-changehandler.html
+++ b/src/main/resources/templates/internaldispatches/album-changehandler.html
@@ -46,6 +46,7 @@
         <input type="hidden" th:field="*{status}">
         <input type="hidden" th:field="*{remark}">
         <input type="hidden" th:field="*{stamp}">
+        <input type="hidden" th:field="*{isActive}">
 
         <div class="row mb-3">
             <div class="col-sm-2 form-control-plaintext offset-sm-1">
