--- a/src/main/resources/templates/internaldispatches/form.html
+++ b/src/main/resources/templates/internaldispatches/form.html
@@ -41,6 +41,7 @@
         <input type="hidden" th:field="*{receivedInternalDate}">
         <input type="hidden" th:field="*{internalHandlerName}">
         <input type="hidden" th:field="*{internalHandlerPhoneNumber}">
+        <input type="hidden" th:field="*{isActive}">
 
         <div class="row mb-3">
             <div class="col-sm-2 form-control-plaintext offset-sm-1">
