--- a/src/main/resources/templates/externaldispatches/info.html
+++ b/src/main/resources/templates/externaldispatches/info.html
@@ -126,7 +126,7 @@
                 <th class="align-middle">Action</th>
             </thead>
             <tbody>
-                <tr th:each="entry : ${externalDispatch.documents}">
+                <tr th:each="entry : ${externalDispatch.documents}" th:class="${entry.value} ? 'table-default' : 'table-danger'">
                     <td class="align-middle" th:text="${entry.key.decimalNumber}"></td>
                     <td class="align-middle" th:text="${entry.key.name}"></td>
                     <td class="align-middle text-center" th:text="${entry.value}"></td>
