--- a/src/main/resources/templates/internaldispatches/info.html
+++ b/src/main/resources/templates/internaldispatches/info.html
@@ -134,7 +134,7 @@
             <th class="align-middle">Action</th>
             </thead>
             <tbody>
-            <tr th:each="tempDocument : ${internalDispatch.documents}">
+            <tr th:each="tempDocument : ${internalDispatch.documents}" th:class="${tempDocument.value} ? 'table-default' : 'table-danger'">
                 <td class="align-middle" th:text="${tempDocument.key.decimalNumber}"></td>
                 <td class="align-middle" th:text="${tempDocument.key.name}"></td>
                 <td class="align-middle text-center" th:text="${tempDocument.value}"></td>
